Portfolio performance backend structure and some minor crash bugfixes

--- a/web/Views/Home/Index.cshtml
+++ b/web/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
                     <td>@{
                             //dolar se spremeni po potrebi iz nastavitev
                             //popravi vejice na 1000ice
-                            string currentRateString = ViewBag.CurrentRate?.ToString();
+                            string currentRateString = ViewBag.CurrentRate.ToString();
                             string priceUsd = crypto.PriceUsd;
                             string formattedPrice = "Invalid Price";
 
